--- a/lectures/DL_Luca_Antiga/1.1-PyTorch-Basics.ipynb
+++ b/lectures/DL_Luca_Antiga/1.1-PyTorch-Basics.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -94,13 +94,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "None\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "# Create tensors\n",
     "# torch.tensor is the recommended way to build a new tensor from existing data, copying them\n",
@@ -132,13 +142,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([2.])\n",
+      "tensor([1.])\n",
+      "tensor([1.])\n"
+     ]
+    }
+   ],
    "source": [
     "# Compute gradients\n",
     "y.backward()\n",
@@ -164,13 +184,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "w:  Parameter containing:\n",
+      "tensor([[ 0.2106, -0.3152,  0.2599],\n",
+      "        [ 0.0074,  0.5636,  0.0091]], requires_grad=True)\n",
+      "b:  Parameter containing:\n",
+      "tensor([-0.5708, -0.1391], requires_grad=True)\n",
+      "y:  tensor([[-1.1567,  0.2266],\n",
+      "        [-1.4382,  0.7664],\n",
+      "        [-0.1772, -1.0955],\n",
+      "        [-0.5648,  0.3237],\n",
+      "        [ 0.2098, -0.5667]], grad_fn=<AddmmBackward>)\n"
+     ]
+    }
+   ],
    "source": [
     "# Create two random tensors, 5x3 and 5x2 (rows major)\n",
     "x = torch.randn(5, 3)\n",
@@ -181,7 +218,8 @@
     "# x is the input data, A is the weight matrix and b is the bias, both A and b are parameters of the function.\n",
     "# Having 3 input features means that x will be a matrix of size Nx3, for some N,\n",
     "# and having 2 output features means that y will have size Nx2.\n",
-    "# Note how N inputs of size 3 get processed at once resulting N outputs of size 2: N is often called batch size\n",
+    "# Note how N inputs of size 3 get processed at once resulting N outputs of size 2:\n",
+    "# N is often called batch size\n",
     "linear = nn.Linear(3, 2)\n",
     "print(\"w: \", linear.weight)\n",
     "print(\"b: \", linear.bias)\n",
@@ -208,13 +246,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss:  1.9202072620391846\n"
+     ]
+    }
+   ],
    "source": [
     "# Build a Loss function, which tells us the distance between two tensors\n",
     "criterion = nn.MSELoss()\n",
@@ -232,13 +278,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dL/dw:  tensor([[ 0.3074, -0.5889,  0.8948],\n",
+      "        [-1.1563,  0.9849,  0.0801]])\n",
+      "dL/db:  tensor([-1.0988,  0.1503])\n"
+     ]
+    }
+   ],
    "source": [
     "# We can now compute the gradients of the loss function:\n",
     "# how do linear's parameters influence the loss value?\n",
@@ -258,9 +314,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.46657943725586\n"
+     ]
+    }
+   ],
    "source": [
     "A = linear.weight + linear.weight.grad\n",
     "b = linear.bias + linear.bias.grad\n",
@@ -280,13 +344,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "loss after 1 step optimization:  1.8727302551269531\n"
+     ]
+    }
+   ],
    "source": [
     "# Perform one optimization step of SGD.\n",
     "# Note that optimizer only knows the parameters of the Linear layer and nothing more,\n",
@@ -318,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -403,11 +475,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Download and construct dataset.\n",
@@ -553,11 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Download and load pretrained resnet having 18 res blocks\n",
@@ -592,13 +656,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "IncompatibleKeys(missing_keys=[], unexpected_keys=[])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Save and load the entire model.\n",
     "torch.save(resnet, 'model.pth')\n",
@@ -644,7 +719,6 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -660,7 +734,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.3"
   },
   "livereveal": {
    "scroll": true,
